<?xml version="1.0"?>
<package format="3">
  <name>turtlesim_fuel_simulation</name>
  <version>0.1.0</version>
  <description>Turtlesim simulation with fuel management</description>

  <maintainer email="frederick.feraco@gmail.com">Frederick Feraco</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

</package>
